--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ after_success:
   - docker build -t sangpham119/sample-server ./server
   - docker build -t sangpham119/sample-nginx ./nginx
   - docker build -t sangpham119/sample-worker ./worker
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - docker push sangpham119/sample-client
+  - docker push sangpham119/sample-server
+  - docker push sangpham119/sample-nginx
+  - docker push sangpham119/sample-worker
