--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build sangpham119/react-test -f ./client/Dockerfile.dev
+  - docker build -t sangpham119/react-test -f ./client/Dockerfile.dev
 script:
   - docker run -e CI=true sangpham119/react-test npm test
 
